Update ResourceLocator.java